--- a/assets/tex/template.tex
+++ b/assets/tex/template.tex
@@ -160,7 +160,7 @@ $endfor$
 $if(toc)$
 {
 \hypersetup{linkcolor=black}
-\setcounter{tocdepth}{$toc-depth$}
+\setcounter{tocdepth}{3}
 \tableofcontents
 }
 $endif$
