Ajout des auteurs de ZdS

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,22 @@
-Romain Porte (MicroJoe) <microjoe@mailoo.org>
+Original code base (pdp / fork on 11-02-2013) : Romain Porte (MicroJoe) <microjoe@mailoo.org>
+
+
+"Zeste de Savoir" code base : 
+
+- firm1 (https://github.com/firm1)
+- Alex-D (https://github.com/Alex-D)
+- GerardPaligot (https://github.com/GerardPaligot)
+- SpaceFox (https://github.com/SpaceFox)
+- cgabard (https://github.com/cgabard)
+
+- Eskimon (https://github.com/Eskimon)
+- poulp (https://github.com/poulp)
+- ShigeruM (https://github.com/ShigeruM)
+- Ge0 (https://github.com/Ge0)
+- artragis (https://github.com/artragis)
+- vhf (https://github.com/vhf)
+- Coy0te (https://github.com/Coy0te)
+- Taluu (https://github.com/Taluu)
+- Thunderseb (https://github.com/Thunderseb)
+- geoffreyc (https://github.com/geoffreyc)
+- delphiki (https://github.com/delphiki)
